--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@nuxt/icon": "^2.1.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
